--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,8 @@ Nav bar
 }
 
 #logo {
-	width: 150px !important;
+	width: 220px !important;
+	padding:5px;
 	-webkit-transition: 0.4s !important;
 	-o-transition: 0.4s !important;
 	transition: 0.4s !important;
@@ -482,7 +483,7 @@ Parallax section
 .parallax1 {
 	background-image: url('https://www.gssoc.tech/images/0.jpg');
 	width: 100%;
-	height: 40px;
+	height: 80px;
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -495,7 +496,7 @@ Parallax section
 	-webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
 	opacity: 0.4;
-	height: 40px;
+	height: 80px;
 	width: 100%;
 }
 
@@ -582,53 +583,6 @@ svg {
 	animation-iteration-count: infinite;
 	fill: var(--footer-bg);
 }
-.drop {
-	fill: var(--footer-bg);
-	-webkit-animation: drop 3.2s linear infinite normal;
-	animation: drop 3.2s linear infinite normal;
-	stroke: var(--footer-bg);
-	stroke-width: 0.5;
-	-webkit-transform: translateY(25px);
-	-ms-transform: translateY(25px);
-	transform: translateY(25px);
-	transform-box: fill-box;
-	-webkit-transform-origin: 50% 100%;
-	-ms-transform-origin: 50% 100%;
-	transform-origin: 50% 100%;
-}
-.drop2 {
-	-webkit-animation-delay: 3s;
-	animation-delay: 3s;
-	-webkit-animation-duration: 3s;
-	animation-duration: 3s;
-}
-.drop3 {
-	-webkit-animation-delay: -2s;
-	animation-delay: -2s;
-	-webkit-animation-duration: 3.4s;
-	animation-duration: 3.4s;
-}
-.drop4 {
-	-webkit-animation-delay: 1.7s;
-	animation-delay: 1.7s;
-}
-.drop5 {
-	-webkit-animation-delay: 2.7s;
-	animation-delay: 2.7s;
-	-webkit-animation-duration: 3.1s;
-	animation-duration: 3.1s;
-}
-.drop6 {
-	-webkit-animation-delay: -2.1s;
-	animation-delay: -2.1s;
-	-webkit-animation-duration: 3.2s;
-	animation-duration: 3.2s;
-}
-.gooeff {
-	-webkit-filter: url(#goo);
-	filter: url(#goo);
-	fill: var(--footer-bg);
-}
 
 #wave1 {
 	fill: var(--footer-bg);
@@ -646,51 +600,6 @@ svg {
 	fill: var(--wave2-bg);
 }
 
-@-webkit-keyframes drop {
-	0% {
-		-webkit-transform: translateY(25px);
-		transform: translateY(25px);
-	}
-	30% {
-		-webkit-transform: translateY(-10px) scale(0.1);
-		transform: translateY(-10px) scale(0.1);
-	}
-	30.001% {
-		-webkit-transform: translateY(25px) scale(1);
-		transform: translateY(25px) scale(1);
-	}
-	70% {
-		-webkit-transform: translateY(25px);
-		transform: translateY(25px);
-	}
-	100% {
-		-webkit-transform: translateY(-10px) scale(0.1);
-		transform: translateY(-10px) scale(0.1);
-	}
-}
-
-@keyframes drop {
-	0% {
-		-webkit-transform: translateY(25px);
-		transform: translateY(25px);
-	}
-	30% {
-		-webkit-transform: translateY(-10px) scale(0.1);
-		transform: translateY(-10px) scale(0.1);
-	}
-	30.001% {
-		-webkit-transform: translateY(25px) scale(1);
-		transform: translateY(25px) scale(1);
-	}
-	70% {
-		-webkit-transform: translateY(25px);
-		transform: translateY(25px);
-	}
-	100% {
-		-webkit-transform: translateY(-10px) scale(0.1);
-		transform: translateY(-10px) scale(0.1);
-	}
-}
 @-webkit-keyframes wave {
 	to {
 		-webkit-transform: translateX(-100%);
@@ -711,7 +620,7 @@ footer {
 }
 
 .logo {
-	width: 150px;
+	width: 180px;
 	display: block;
 }
 
