--- a/css/style.css
+++ b/css/style.css
@@ -481,9 +481,9 @@ Hero figure section
 Parallax section
 -------------------*/
 .parallax1 {
-	background-image: url('https://www.gssoc.tech/images/0.jpg');
+	background-image: url('../assets/Images/Front-img/Parallax.jpg');
 	width: 100%;
-	height: 80px;
+	height: 100px;
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
@@ -495,8 +495,8 @@ Parallax section
 	position: relative;
 	-webkit-filter: grayscale(100%);
 	filter: grayscale(100%);
-	opacity: 0.4;
-	height: 80px;
+	opacity: 0.2;
+	height: 100px;
 	width: 100%;
 }
 
