--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,7 @@ html {
 html[data-theme='dark'] {
 	--theme-color: rgb(245, 90, 43);
 	--bg1-color: #121212;
+	--bg0-color:rgba(0, 0, 0, 0.1);
 	--font-color: #fff;
 	--bg2-color: #272727;
 	--bg-Card: #202020;
@@ -2585,11 +2586,11 @@ h5 {
 }
 .carousel-item .card{
 	border-radius: 7%;
-	background-color: var(--bg2-color);
+	background-color: var(--bg0-color);
 }
 .carousel-item .card:hover{
     transform: scale(1.05);
-    box-shadow: 0px 0px 10px 0px #F47621; 
+    box-shadow: 0px 0px 10px 0px transparent; 
 }
 								
 /* here */
