--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ Hero figure section
 	margin: 0;
 	min-width: 0;
 	min-height: 0;
-	border-radius: 0.55rem;
+	border-radius: 0.75rem;
 }
 
 .hero-fig-button:before{
@@ -472,13 +472,14 @@ Hero figure section
 	left: 0;
 	top: 0;
 	background: var(--theme-color);
-	width: 130%;
-	height: 160%;
+	width: 100%;
+	height: 100%;
 	z-index: -1;
 	transform: rotate(-90deg);
 	transform-origin: bottom left;
 	transition: all 0.4s;
-	border-radius: 0.35rem;	
+	border-radius: 0.35rem;
+	padding: 20px;
 }
 
 .hero-fig-button:hover::before{
